:arrow-up: dependencies, test on stable/oldstable go versions
Signed-off-by: Joe Fitzgerald <jfitzgerald@vmware.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,13 +4,16 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ["stable", "oldstable"]
     steps:
       - uses: actions/checkout@v2
 
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.18
+          go-version: ${{ matrix.go }}
 
       - name: Build and Test SFDC
         run: go build ./... && go test -v -race ./...
